--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,88 @@
-# Django/Python
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+*.egg
 *.pyc
 *.pyo
-*.db
-*.sqlite3
-.env
+*.pyd
+
+# Django
 *.log
-logs/
-**/logs/
-zeuzcrypto_server/zeuzcryptoserver/logs/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 /staticfiles/
 /media/
-/venv/
-/env/
-# Node/Vite
-/node_modules/
-.DS_Store
-# VSCode
+/static/
+migrations/*.py
+!migrations/__init__.py
+
+# Virtual Environment
+.env
+.venv
+env/
+venv/
+ENV/
+**/env/
+**/venv/
+
+# Logs
+logs/
+**/logs/
+*.log
+zeuzcrypto_server/zeuzcryptoserver/logs/
+
+# Node/JavaScript
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+dist/
+build/
+
+# IDEs and editors
+.idea/
 .vscode/
-# OS/Editor
+*.swp
+*.swo
+*.swn
+*.bak
+*.orig
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
+.tox/
+coverage.xml
+*.cover
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# Misc
+*.zip
+*.tar.gz
+*.env
+.env.*
+!.env.example
