--- a/Crypto-Frontend/package.json
+++ b/Crypto-Frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.12.1",
     "lucide-react": "^0.539.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.2"
   },
   "devDependencies": {
