--- a/zeuzcrypto_server/zeuzcryptoserver/requirements.txt
+++ b/zeuzcrypto_server/zeuzcryptoserver/requirements.txt
@@ -1,8 +1,23 @@
-Django>=4.2.0,<5.0.0
-djangorestframework>=3.14.0
-djangorestframework-simplejwt>=5.2.0
-django-cors-headers>=4.0.0
-django-filter>=23.0
-Pillow>=10.0.0
-psycopg2-binary>=2.9.0
-python-decouple>=3.8
+amqp==5.3.1
+asgiref==3.10.0
+billiard==4.2.2
+celery==5.5.3
+channels==4.3.1
+channels_redis==4.3.0
+click==8.3.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+Django==5.2.7
+kombu==5.5.4
+msgpack==1.1.2
+packaging==25.0
+prompt_toolkit==3.0.52
+python-dateutil==2.9.0.post0
+redis==6.4.0
+six==1.17.0
+sqlparse==0.5.3
+tzdata==2025.2
+vine==5.1.0
+wcwidth==0.2.14
+websockets==15.0.1
