--- a/Crypto-Frontend/package.json
+++ b/Crypto-Frontend/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^2.2.9",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.12.1",
+    "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
