--- a/Crypto-Frontend/package.json
+++ b/Crypto-Frontend/package.json
@@ -22,6 +22,7 @@
     "@tiptap/react": "^3.16.0",
     "@tiptap/starter-kit": "^3.16.0",
     "axios": "^1.12.1",
+    "decimal.js": "^10.6.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
