Hosting for railway3

--- a/zeuzcrypto_server -2/zeuzcryptoserver/requirements.txt
+++ b/zeuzcrypto_server -2/zeuzcryptoserver/requirements.txt
@@ -26,3 +26,6 @@ whitenoise
 dj-database-url
 psycopg2-binary
 django-cors-headers
+djangorestframework
+djangorestframework-simplejwt
+django-filter
