--- a/Crypto-Frontend/package.json
+++ b/Crypto-Frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "start": "serve -s dist -l $PORT",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -32,7 +33,8 @@
     "react-quill-new": "^3.7.0",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "serve": "^14.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
