--- a/Crypto-Frontend/package.json
+++ b/Crypto-Frontend/package.json
@@ -36,6 +36,9 @@
     "recharts": "^3.1.2",
     "serve": "^14.2.5"
   },
+  "engines": {
+  "node": "20.x"
+},
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
