--- a/Crypto-Frontend/package.json
+++ b/Crypto-Frontend/package.json
@@ -37,8 +37,9 @@
     "serve": "^14.2.5"
   },
   "engines": {
-  "node": "20.x"
-},
+  "node": "20.11.1"
+}
+,
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
